feat(components/home): Hide button icon text in new chat sidebar

--- a/app/components/home.module.scss
+++ b/app/components/home.module.scss
@@ -310,6 +310,12 @@
         margin-top: 15px;
       }
     }
+
+    .sidebar-new-chat {
+      .button_icon-button-text {
+        display: none;
+      }
+    }
   }
 }
 
