--- a/app/styles/highlight.scss
+++ b/app/styles/highlight.scss
@@ -5,7 +5,7 @@
 
   pre,
   code {
-    font-family: Consolas, Monaco, "Andale Mono", "Ubuntu Mono", monospace;
+    font-family: "JetBrains Mono", Consolas, Monaco, "Andale Mono", "Ubuntu Mono", monospace;
   }
 
   pre code {
